--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
    <div class="controls">
       <button class="btn reset">Reset</button>
       <input type="text" id="gridDim" min="1" max="100" name="Number of squares"/>
+      <button class="btn erase">Erase</button>
    </div>
-   <div class="frame">
-      <div class="gridContainer"></div>
-      <div class="knobs">
-         <div class="knob1"></div>
-         <div class="knob2"></div>
+   <div class="outerBox">
+      <div class="frameLeftSpacer"></div>
+      <div class="frame">
+         <div class="gridContainer"></div>
+         <div class="gridOverlay"></div>
+         <div class="knobs">
+            <div class="knob1"></div>
+            <div class="knob2"></div>
+         </div>
       </div>
+      <div class="frameRightSpacer"></div>
    </div>
 </body>
 </html>
