--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    <h1>Etch-A-Sketch</h1>
    <div class="controls">
       <button class="btn reset">Reset</button>
-      <input type="text" id="gridDim" min="1" max="100" name="Number of squares"/>
+      <input class="gridSize" type="text" id="gridDim" min="1"
+         max="100" value="40"/>
       <button class="btn erase">Erase</button>
    </div>
    <div class="outerBox">
@@ -21,6 +22,7 @@
          <div class="gridOverlay"></div>
          <div class="knobs">
             <div class="knob1"></div>
+            <img class="logo" src="Etch_A_Sketch.webp" alt="Etch A Sketch logo">
             <div class="knob2"></div>
          </div>
       </div>
